# classicube-cef-loader-plugin

./: .gitignore  Cargo.toml  README.md  TODO  flake.nix  replace-versions.fish  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: cef-version-check.mjs  check-cef-version.mjs  cross-aarch64.Dockerfile  cross-armhf.Dockerfile  cross-podman.Dockerfile  flake.nix
.github/workflows/: build.yml  cef-version-check.yml  release.yml  rust.yml  update-cef-version.yml  update-lock-files.yml
src/: async_manager.rs  cef_binary_updater.rs  chat_command.rs  error.rs  github_release_checker.rs  lib.rs  loader.rs  logger.rs  panic.rs  plugin_updater.rs  self_path.rs
src/loader/: mod.rs  plugin.rs
src/self_path/: tests.rs
src/updater/: cef_binary.rs  github_release.rs  mod.rs
