[package]
name = "classicube-cef-loader-plugin"
version = "2.1.50"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "=1.0.100"
async-compression = { version = "=0.4.36", features = ["bzip2", "tokio"] }
async-dispatcher = { git = "https://github.com/SpiralP/rust-async-dispatcher.git", branch = "main" }
backtrace = "=0.3.76"
classicube-helpers = { git = "https://github.com/SpiralP/rust-classicube-helpers.git", branch = "main" }
classicube-sys = "=4.3.0"
futures = "=0.3.31"
futures-timer = "=3.0.3"
lazy_static = "=1.5.0"
reqwest = { version = "=0.12.28", features = ["json", "stream"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tar = "=0.4.44"
tokio = { version = "=1.48.0", features = ["full"] }
tokio-util = { version = "=0.7.18", features = ["io"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }

[target.'cfg(unix)'.dependencies]
libc = "=0.2.179"


[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Release version {{version}}"
